crates/review-buddy/tests/snapshots/cli_e2e__pr_view.snap
---
source: crates/review-buddy/tests/cli_e2e.rs
expression: text
---
Add a menu bar and keyboard-driven menus
liminal-hq/review-buddy#214 · open
ada wants ada/menus → main
+32 −1 · 3 files · opened 3d ago

Bucket    Waiting on you · your review is requested
Reviewers smorris (requested), jo (commented)
Checks    1 running · 2 passing · 1 neutral · 1 skipped · 1 cancelled
          running   test (linux)
          skipped   test (windows)
          neutral   coverage
          cancelled bench
Merge     mergeable, though a check isn't passing
Labels    enhancement, ui
Link      https://github.com/liminal-hq/review-buddy/pull/214

Adds a menu bar along the top and a `Menu` type that tracks the selected item.

- `Menu::select_next` and `Menu::select_prev` move the highlight
- `Menu::activate` returns the action for the highlighted item
- The bar itself is a plain `Line`, so it picks up the active theme
