crates/review-buddy/tests/snapshots/cli_e2e__queue_all_buckets.snap
---
source: crates/review-buddy/tests/cli_e2e.rs
expression: text
---
wait	liminal-hq	liminal-hq/review-buddy#214	running	ada	2026-10-05T08:00:00Z	Add a menu bar and keyboard-driven menus
wait	liminal-hq	liminal-hq/review-buddy#209	pass	jo	2026-10-05T05:00:00Z	Raise muted text contrast in the light theme
look	platform	platform/flow!1182	fail	priya	2026-10-05T03:00:00Z	Cache pipeline status lookups
look	smorris	smorris/dotfiles#31	pass	smorris	2026-10-04T10:00:00Z	Tidy zsh startup
later	gitlab-com	kai-codes/notes!12	none	kai	2026-10-02T10:00:00Z	Clarify the install steps
noise	platform	platform/flow!1190	pass	project_42_bot_a1b2c3	2026-10-05T01:00:00Z	Update tokio to 1.47
noise	liminal-hq	liminal-hq/review-buddy#201	pass	renovate[bot]	2026-10-04T10:00:00Z	Update ratatui to 0.30
