crates/review-buddy/tests/snapshots/cli_e2e__theme_list.snap
---
source: crates/review-buddy/tests/cli_e2e.rs
expression: text
---
liminal-hq	Liminal HQ	dark	current
dusk	Dusk	dark	
afterglow-dark	Afterglow Dark	dark	
afterglow-light	Afterglow Light	light
